--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.4.1
+beautifulsoup4==4.9.3
 dj-database-url==0.5.0
 Django==3.2.5
+django-bootstrap-datepicker-plus==3.0.5
+django-bootstrap4==3.0.1
 django-debug-toolbar==3.2.1
 et-xmlfile==1.1.0
 gunicorn==20.1.0
@@ -8,6 +11,7 @@ openpyxl==3.0.7
 Pillow==8.3.1
 psycopg2==2.9.1
 pytz==2021.1
+soupsieve==2.2.1
 sqlparse==0.4.1
 whitenoise==5.2.0
 xlrd==2.0.1
