--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 selio_project/__pycache__
-store/__pycache__/*
-store/migrations/*
+store/__pycache__/*.pyc
+store/migrations/*.pyc
+store/migrations/*.py
 *.pyc
